schema/testdata/validation_get_operation_no_unique_lookup_in_inputs/schema.keel
model MyModel {
    fields {
        text Text
    }

    operations {
        get getMyModel(text)
    }
}